fix: update scrollbar css

--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,9 @@
 
 ::-webkit-scrollbar-track {
     background: transparent;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-right: 2px;
 }
 
 
